--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,121 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+
+.card__like-button,
+.footer__save-button,
+.module__button {
+  position: relative;
+  overflow: hidden;
+}
+
+.card__like-button:focus,
+.footer__save-button:focus,
+.module__button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 #000;
+  transition: box-shadow 0.3s ease;
+}
+
+.card__like-button::before,
+.footer__save-button::before,
+.module__button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: #000;
+  transition: transform 0.5s ease-in-out;
+  transform: translateX(-100%);
+}
+
+.card__like-button:hover::before,
+.footer__save-button:hover::before,
+.module__button:hover::before {
+  transform: translateX(0);
+  z-index: 1;
+}
+
+:is(button:hover) .button__text,
+.floppy__svg {
+  position: relative;
+  color: #fff;
+  z-index: 1;
+  mix-blend-mode: difference;
+  fill: #fff;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  outline: 2px solid #000;
+}
+
+.like-icon:hover .core {
+  fill: var(--contour-color);
+  transition: fill 0.3s;
+}
+
+.core {
+  fill: var(--opacity);
+  transition-property: fill;
+  transition-delay: 0.12s;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--contour-color);
+  transition: fill 0.3s;
+  transition-delay: 0.05s;
+}
+
+.main-body {
+  fill: var(--opacity);
+  transition: fill 0.3s;
+}
+
+.sparks {
+  fill: none;
+}
+
+.like-icon:active .core,
+.like-icon:active .main-body {
+  fill: var(--animation-fill-color);
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s ease-in;
+}
+
+.like-icon.is-liked .sparks {
+  animation: appearance__sparks 0.3s 0.3s ease-in;
+}
+
+/* А почему не через класс .heart ? А потому что он не работает...
+Slime love of the time я разочарован */
+
+.like-icon.is-liked .main-body,
+.like-icon.is-liked .core,
+.like-icon.is-liked .contour {
+  fill: var(--animation-fill-color);
+  animation: increase__heart 0.3s 0.1s ease-in;
+}
+
+@keyframes increase__heart {
+  from {
+    scale: 1;
+  }
+  to {
+    scale: 1.25;
+  }
+}
+
+@keyframes appearance__sparks {
+  from {
+    fill: none;
+  }
+  to {
+    fill: var(--animation-fill-color);
+  }
+}
