--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
 }
 
 h1,
@@ -30,11 +30,18 @@ a {
   color: inherit;
 }
 
+img {
+  inline-size: 100%;
+  block-size: 100%;
+  object-position: center;
+}
+
 button,
 input {
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
+  cursor: pointer;
 }
 
 ul,
