--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,213 @@
 
 */
 
+/* Настройки текста */
+.header__title-big {
+  font-family: "PressStart2P", sans-serif;
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  font-weight: 400;
+  inline-size: fit-content;
+}
+
+.header__title-mini {
+  font-family: "PressStart2P", sans-serif;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  font-weight: 400;
+  text-transform: uppercase;
+  inline-size: fit-content;
+}
+
+.card__title {
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  margin-block: 5px;
+  margin-inline: 10px;
+}
+
+.card__text {
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.button__text {
+  font-family: "PressStart2P", sans-serif;
+  font-size: 14px;
+  line-height: 90%;
+  font-weight: 400;
+}
+
+/* Страница */
+
 .page {
+  display: grid;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  max-inline-size: 700px;
+  background-image: var(--bg-page-gradient);
+  background-attachment: fixed;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding-block: clamp(120px, 0.75vw + 117.2px, 128px);
+  outline: 2px solid #000;
+  background-color: #fff;
+  margin-block: 102px;
+}
+
+.main {
+  margin-block-start: 2px;
+}
+
+.footer {
+  justify-self: center;
+  margin-block: 52px 102px;
+}
+
+/* Карточки */
+.section__article {
+  display: grid;
+  gap: 54px;
+}
+
+.card {
+  display: grid;
+  outline: 2px solid #000;
+  background-color: #fff;
+}
+
+.card__img {
+  inline-size: 100%;
+  block-size: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
+  outline: 2px solid #000;
+  position: relative;
+}
+
+.card__img::after {
+  position: absolute;
+  content: "</HTML>";
+  font-family: "PressStart2P", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #000;
+  inset-block-start: 25px;
+  inset-inline-end: 25px;
+  -webkit-text-stroke: 1px #fff;
+  mix-blend-mode: multiply;
+}
+
+@supports ((text-stroke: 1px #fff) or (-webkit-text-stroke: 1px #FFF;)) {
+  .card__img::after {
+    -webkit-text-stroke: 1px #fff;
+    text-shadow: 1px 0 0 #fff, -1px 0 0 #fff, 0 1px 0 #fff, 0 -1px 0 #fff;
+  }
+}
+
+.card__container-text {
+  display: grid;
+  gap: 26px;
+  margin-block-start: 25px;
+  margin-block-end: 25px;
+  margin-inline: 27px;
+  inline-size: clamp(20.0625rem, 12.9102rem + 30.5164vw, 40.375rem);
+}
+
+/* Кнопки */
+
+.container__button {
+  display: flex;
+  justify-self: end;
+  align-items: center;
+  gap: 6px;
+}
+
+.card__icon-button {
+  border: none;
+  background-color: transparent;
+  inline-size: 39px;
+  block-size: 34px;
+  padding: 0;
+}
+
+.card__like-button {
+  border: 2px solid #000;
+  background-color: transparent;
+  padding-block-start: 6px;
+  inline-size: 130px;
+  block-size: 38px;
+}
+
+.floppy__svg {
+  inline-size: 22px;
+}
+
+.footer__save-button {
+  display: flex;
+  border: 2px solid #000;
+  gap: 8px;
+  align-items: center;
+  padding-block: 14.5px;
+  padding-inline: 20px;
+}
+
+/* Модульное окно */
+
+.module__window {
+  border: 2px solid #000;
+  background-color: #fff;
+  padding-bottom: 30px;
+  padding-inline: clamp(2.625rem, 2.8891rem + -1.1268vw, 1.875rem);
+  margin-inline: auto;
+}
+
+.module__window:focus {
+  outline: none;
+}
+
+.module__window::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+}
+
+.module__title {
+  display: flex;
+  gap: 20px;
+  inline-size: fit-content;
+}
+
+.module__title .floppy__svg {
+  inline-size: 39px;
+  aspect-ratio: 1 / 1;
+}
+
+.module__title_text {
+  font-family: "PressStart2P";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+  text-transform: uppercase;
+}
+
+.module__button {
+  margin-block-start: 30px;
+  border: 2px solid #000;
+  padding-block: 12px;
+  padding-inline: clamp(7.125rem, 6.7289rem + 1.6901vw, 8.25rem);
+  background-color: #fff;
+}
+
+@media (width <= 375px) {
+  .footer__save-button {
+    display: grid;
+    justify-items: center;
+    gap: 10px;
+  }
+
+  .floppy__svg {
+    inline-size: 28px;
+  }
 }
