--- a/styles/animations.css
+++ b/styles/animations.css
@@ -25,6 +25,7 @@ button:not(.card__icon-button):focus {
 
 button:focus-visible {
   outline: 2px solid #000;
+  transition: outline 0.3s ease;
 }
 
 button:not(.card__icon-button)::before {
