--- a/styles/animations.css
+++ b/styles/animations.css
@@ -13,19 +13,19 @@
 button {
   position: relative;
   overflow: hidden;
-  transition: box-shadow 0.3s ease;
+  transition: box-shadow 0.3s linear;
+  outline: 2px solid transparent;
 }
 
 button:not(.card__icon-button):focus {
   outline: none;
   box-shadow: 2px 2px 0 #000;
-  transition: box-shadow 0.3s ease;
-  transition-timing-function: linear;
+  transition: box-shadow 0.3s linear;
 }
 
 button:focus-visible {
   outline: 2px solid #000;
-  transition: outline 0.3s ease;
+  transition: outline 0.3s linear;
 }
 
 button:not(.card__icon-button)::before {
@@ -34,7 +34,6 @@ button:not(.card__icon-button)::before {
   inset: 0;
   background-color: #000;
   transition: transform 0.5s ease-in-out;
-  transition-timing-function: linear;
   transform: translateX(-100%);
 }
 
@@ -84,7 +83,6 @@ button:hover::before {
 
 .like-icon.is-liked .sparks {
   animation: appearance__sparks 0.3s 0.3s ease-in;
-  animation-timing-function: linear;
 }
 
 /* А почему не через класс .heart ? А потому что он не работает...
