--- a/styles/style.css
+++ b/styles/style.css
@@ -117,7 +117,7 @@
   z-index: 1;
   opacity: 0.5;
   inset-block-start: 25px;
-  inset-inline-end: 25px;
+  inset-inline-end: clamp(0.8125rem, 0.5484rem + 1.1268vw, 1.5625rem);
   mix-blend-mode: hard-light;
   text-shadow: 1px 0 #fff, -1px 0 #fff, 0 1px #fff, 0 -1px #fff;
 }
@@ -187,7 +187,6 @@
 /* Модульное окно */
 
 .module__window[open] {
-  opacity: .3;
   border: 2px solid #000;
   background-color: #fff;
   padding-inline: 27px;
